<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MPayer Cash Box</string>
    <string name="title_activity_main">MPayer CashBox</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="agronet">Agronet</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="orders">Orders</string>
    <string name="transactions">Transactions</string>
    <string name="members">Members</string>
    <string name="accounts">Accounts</string>
    <string name="reports">Reports</string>
    <string name="title_activity_accounts">AccountsActivity</string>
    <string name="title_activity_transactions">TransactionsActivity</string>
    <string name="title_activity_members">MembersActivity</string>
    <string name="title_activity_reports">ReportsActivity</string>
    <string name="inline_preferences">Crash Reports</string>
    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="branch_name">Branch Name</string>
    <string name="branch_name_summary">Set the name of the branch</string>
    <string name="branch_code">Branch Code</string>
    <string name="branch_code_summary">The code id for the Branch</string>
    <string name="organization">Organization</string>
    <string name="organization_summary">The name of the Organization</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>
    <string name="cash_box">Cash Box</string>
    <string name="printer">Printer</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Update Settings</string>
    <string name="title_activity_add_transactions">AddTransactionsActivity</string>
    <string name="title_activity_selected_member">SelectedMemberActivity</string>

</resources>
